--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,1 +1,6 @@
-<h1>hola about</h1>
+<div class="card">
+    <div class="card-body">
+        <h1>about</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero dolore sunt beatae esse quia, maxime optio enim voluptatibus porro. Nesciunt, ad temporibus. Voluptate nemo quos doloribus error, ab vitae optio.</p>
+    </div>
+</div>
