--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,2 +1,10 @@
+<div class="border border-primary rounded border-5">
+    <h1 class="display-4">NODE MONGO CRUD</h1>
+    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur recusandae in incidunt iure
+        rem, animi velit! Nobis quidem, possimus mollitia, placeat tempore officiis tenetur sit perspiciatis molestias
+        ipsa eos. Consectetur?</p>
+    <hr>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <a href="#" class="btn btn-primary btn-lg">INICIO</a>
 
-    <h1>GJDFSNGODNSFOI</h1>
+</div>
