trabajando en las vistas y formularios

--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -2,8 +2,11 @@
     <div class="card">
         <div class="card-header">New Note</div>
         <div class="card-doby">
-
+            <form action="/">
+                <div class="form-group">
+                    <input type="text" name="tittle" class="form-control" placeholder="Tittle" autofocus>
+                </div>
+            </form>
         </div>
-
     </div>
 </div>
