--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -4,11 +4,25 @@
     <div class="col-md-3">
       <div class="card">
         <div class="card-body">
-          <h4 class="card-tittle">
+          <h4
+            class="card-tittle d-flex justify-content-between align-items-center"
+          >
             {{tittle}}
+            <a href="#"><i class="fas fa-edit"></i></a>
           </h4>
           <p>{{description}}</p>
+          <div class="d-grid gap-2">
+            <button class="btn btn-danger btn-block btn-sm">Delete</button>
+          </div>
         </div>
+      </div>
+    </div>
+  {{else}}
+    <div class="card mx-auto">
+      <div class="card-body">
+        <p class="lead">Todavia no hay notas</p>
+        <div class="d-grid gap-2">
+          <a href="/notes/add" class="btn btn-succes">Crea una!</a></div>
       </div>
     </div>
   {{/each}}
