--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -8,7 +8,7 @@
             class="card-tittle d-flex justify-content-between align-items-center"
           >
             {{tittle}}
-            <a href="#"><i class="fas fa-edit"></i></a>
+            <a href="/notes/edit/{{_id}}"><i class="fas fa-edit"></i></a>
           </h4>
           <p>{{description}}</p>
           <div class="d-grid gap-2">
