--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -31,6 +31,7 @@
   <body>
     <p>navegacion</p>
     <main class="container">
+      {{> messages}}
       {{{body}}}
     </main>
     <p>footer</p>
