signup form validation

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -32,6 +32,7 @@
     <p>navegacion</p>
     <main class="container">
       {{> messages}}
+      {{> errors}}
       {{{body}}}
     </main>
     <p>footer</p>
