--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,1 +1,53 @@
-<h1>registrarte</h1>
+<div class="row">
+  <div class="col-md-4 mx-auto">
+    <div class="card">
+      <div class="card-header">Acaount Register</div>
+      <div class="card-doby">
+        <form action="/users/signup" method="POST">
+          <div class="form-group">
+            <input
+              type="text"
+              name="name"
+              id=""
+              placeholder="Name"
+              class="form-control"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="email"
+              name="email"
+              id=""
+              placeholder="Email"
+              class="form-control"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              name="password"
+              id=""
+              placeholder="password"
+              class="form-control"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              name="confirm_password"
+              id=""
+              placeholder="confirm password"
+              class="form-control"
+            />
+          </div>
+          <div class="form-group">
+            <button
+              type="submit"
+              class="btn btn-primary btn-block"
+            >SignUp</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
