--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -11,6 +11,7 @@
               id=""
               placeholder="Name"
               class="form-control"
+              value="{{name}}"
             />
           </div>
           <div class="form-group">
@@ -20,6 +21,7 @@
               id=""
               placeholder="Email"
               class="form-control"
+              value="{{email}}"
             />
           </div>
           <div class="form-group">
@@ -29,6 +31,7 @@
               id=""
               placeholder="password"
               class="form-control"
+              value="{{password}}"
             />
           </div>
           <div class="form-group">
@@ -38,6 +41,7 @@
               id=""
               placeholder="confirm password"
               class="form-control"
+              value="{{confirm_password}}"
             />
           </div>
           <div class="form-group">
