--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,1 +1,15 @@
-<h1>ingresar</h1>
+<div class="row">
+    <div class="col-md-4 mx-auto">
+        <div class="card mt-4 text-center">
+            <div class="card-header">
+               <h1>LogIn</h1>
+            </div>
+            <img src="/img/auto-rojo.jpg" class="rounded-circle mx-auto d-block m-4 logo" alt="auto rojo">
+            <div class="card-body">
+<form action="">
+
+</form>
+            </div>
+        </div>
+    </div>
+</div>
