--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,15 +1,41 @@
 <div class="row">
-    <div class="col-md-4 mx-auto">
-        <div class="card mt-4 text-center">
-            <div class="card-header">
-               <h1>LogIn</h1>
-            </div>
-            <img src="/img/auto-rojo.jpg" class="rounded-circle mx-auto d-block m-4 logo" alt="auto rojo">
-            <div class="card-body">
-<form action="">
+  <div class="col-md-4 mx-auto">
+    <div class="card mt-4 text-center">
+      <div class="card-header">
+        <h1>LogIn</h1>
+      </div>
+      <img
+        src="/img/auto-rojo.jpg"
+        class="rounded-circle mx-auto d-block m-4 logo"
+        alt="auto rojo"
+      />
+      <div class="card-body">
+        <form action="">
+          <div class="form-group">
+            <input
+              type="email"
+              class="form-control"
+              name="email"
+              placeholder="Email"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              class="form-control"
+              name="password"
+              placeholder="Password"
+            />
+          </div>
+          <div class="form-group">
+            <button
+              type="submit"
+              class="btn btn-primary btn-block"
+            >signIn</button>
+          </div>
 
-</form>
-            </div>
-        </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
