sing in and authentication

--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -4,13 +4,13 @@
       <div class="card-header">
         <h1>LogIn</h1>
       </div>
-      <img
+      <img  
         src="/img/auto-rojo.jpg"
         class="rounded-circle mx-auto d-block m-4 logo"
         alt="auto rojo"
       />
       <div class="card-body">
-        <form action="">
+        <form action="/users/signin" method="POST">
           <div class="form-group">
             <input
               type="email"
