--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -25,6 +25,7 @@
   {{else}}
     <div class="card mx-auto">
       <div class="card-body">
+        <h1> Hello {{user.name}} !!</h1>
         <p class="lead">Todavia no hay notas</p>
         <div class="d-grid gap-2">
           <a href="/notes/add" class="btn btn-succes">Crea una!</a></div>
