--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -21,35 +21,41 @@
           <a class="nav-link" href="/about">About</a>
         </li>
       </ul>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            aria-current="page"
-            href="/users/signin"
-          >SignIn</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/users/signup">SignUp</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdownMenuLink"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Notes
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="/notes">All Notes</a></li>
-            <li><a class="dropdown-item" href="/notes/add">Add Note</a></li>
-            <li><a class="dropdown-item" href="/users/logout">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
+      {{#if user}}
+        <ul class="navbar-nav ms-auto">
+
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdownMenuLink"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Notes
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="/notes">All Notes</a></li>
+              <li><a class="dropdown-item" href="/notes/add">Add Note</a></li>
+              <li><a class="dropdown-item" href="/users/logout">Logout</a></li>
+            </ul>
+          </li>
+        </ul>
+      {{else}}
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="/users/signin"
+            >SignIn</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/signup">SignUp</a>
+          </li>
+        </ul>
+      {{/if}}
 
     </div>
   </div>
